Possible audio solution. Solved a lot of bugs related to complex waves. Solved out of screen multitouch

--- a/css/bottomCStyles.css
+++ b/css/bottomCStyles.css
@@ -35,13 +35,13 @@ button:focus {
   background-color: #FFE900;
 }
 
-#pure-button:hover {
+/*#pure-button:hover {
   background-color: #8d98a3 !important;
 }
 
 #complex-button:hover {
   background-color: #8d98a3 !important;
-}
+}*/
 
 
 .button-header{
